--- a/index.html
+++ b/index.html
@@ -39,29 +39,26 @@
         </div>
 
         <h3>
-<a id="welcome-to-p2p-sip-over-manet" class="anchor" href="#welcome-to-p2p-sip-over-manet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to P2P-SIP over MANET.</h3>
+<a id="welcome-to-the-home-of-the-p2p-sip-over-manet-project-at-carleton-university" class="anchor" href="#welcome-to-the-home-of-the-p2p-sip-over-manet-project-at-carleton-university" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the home of the P2P-SIP over MANET project at Carleton University!</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>We will investigate how to come up with secure and effective deployments of SIP VOIP in a hierarchical MANET setting. More detail forthcoming!</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="the-team" class="anchor" href="#the-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The team:</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Babak Esfandiari (<a href="https://github.com/esfandia" class="user-mention">@esfandia</a>), Professor.
+Thomas Kunz (<a href="https://github.com/thomashanskunz" class="user-mention">@thomashanskunz</a>), Professor.
+Francois Gagnon, Adjunct Professor.
+Alan Davoust, Postdoc.
+Mahmoud Raslan, Postdoc.
+Alexandre Cormier (<a href="https://github.com/alexcormier" class="user-mention">@alexcormier</a>), Master's student.
+Silas Echegini, Master's student.
+Frank Ockenfeld, visiting student.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="the-papers" class="anchor" href="#the-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The papers:</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Coming soon, we hope!</p>
       </section>
 
     </div>
