Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 <h3>
 <a id="the-team" class="anchor" href="#the-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The team:</h3>
 
-<p>Babak Esfandiari (<a href="https://github.com/esfandia" class="user-mention">@esfandia</a>), Professor.
-Thomas Kunz (<a href="https://github.com/thomashanskunz" class="user-mention">@thomashanskunz</a>), Professor.
-Francois Gagnon, Adjunct Professor.
-Alan Davoust, Postdoc.
-Mahmoud Raslan, Postdoc.
-Alexandre Cormier (<a href="https://github.com/alexcormier" class="user-mention">@alexcormier</a>), Master's student.
-Silas Echegini, Master's student.
-Frank Ockenfeld, visiting student.</p>
+<p>Babak Esfandiari (<a href="https://github.com/esfandia" class="user-mention">@esfandia</a>), Professor.<br>
+Thomas Kunz (<a href="https://github.com/thomashanskunz" class="user-mention">@thomashanskunz</a>), Professor.<br>
+Francois Gagnon, Adjunct Professor.<br>
+Alan Davoust, Postdoc.<br>
+Mahmoud Raslan, Postdoc.<br>
+Alexandre Cormier (<a href="https://github.com/alexcormier" class="user-mention">@alexcormier</a>), Master's student.<br>
+Silas Echegini, Master's student.<br>
+Frank Ockenfeld, visiting student.  </p>
 
 <h3>
 <a id="the-papers" class="anchor" href="#the-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The papers:</h3>
